<resources>
    <string name="mode" translatable="false">day</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Stolpersteine Kiel</string>
    <string name="nav_header_subtitle">NIE WIEDER IST JETZT</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_karte">OSM Karte</string>
    <string name="menu_artist">Der Künstler</string>
    <string name="menu_project">Das Projekt</string>
    <string name="placeholder">…</string>
    <string name="gunter_demnig">Gunter Demnig</string>
    <string name="das_kunstprojekt">Das Kunstprojekt</string>
    <string name="this_project1">Die in Fußwege eingebetteten Gedenksteine halten die Erinnerung an die Opfer des Nationalsozialismus - jüdische Bürger, Sinti und Roma, politisch Verfolgte, Homosexuelle, Zeugen Jehovas und "Euthanasie"-Opfer - wach.</string>
    <string name="this_project2">" Auf den etwa zehn mal zehn Zentimeter großen Stolpersteinen sind kleine Messingplatten mit den Namen und Lebensdaten von NS-Opfern angebracht. \\nSie werden vor dem letzten bekannten und frei gewählten Wohnort in das Pflaster des Gehweges eingelassen. Finanziert werden die Stolpersteine durch private Spenden."</string>
        <string name="this_project3">Zuletzt wurden am 20. Mai 2019 insgesamt 9 Stolpersteine verlegt. In Kiel liegen damit bereits 262 Steine.</string>
    <string name="this_project4">Die Sinti und Roma in Schleswig-Holstein lehnen allerdings Stolpersteine für ihre Opfer ab. In Kiel wird stattdessen durch einen Gedenkstein und eine erläuternde Informationstafel im Hiroshimapark gegenüber dem Haus Lorentzendamm 36 an ihren Leidensweg erinnert.</string>
    <string name="die_stolpersteine">Die Stolpersteine</string>
    <string name="this_artist1">Gunter Demnig (* 27. Oktober 1947 in Berlin)  ist ein deutscher Künstler.
        Bekannt wurde er durch die Stolpersteine, die er seit 1996 zur  Erinnerung an Opfer in der Zeit
        des Nationalsozialismus verlegt.</string>
    <string name="this_artist2">Demnig wuchs in Nauen und Berlin auf.
        1967 legte er das Abitur ab und begann ein Studium der Kunstpädagogik an der Hochschule für
        Bildende Künste in Berlin bei Herbert Kaufmann. 1969/1970 folgte ein Jahr
        Industrial-Design-Studium an derselben Hochschule. Ab 1971 setzte er das Kunstpädagogik-Studium
        an der Kunsthochschule Kassel fort und legte 1974 dort das Erste Staatsexamen ab.\nIm selben
        Jahr begann Demnig ein Kunststudium an der Universität Kassel bei Harry Kramer, dem ab 1977 für
        zwei Jahre die Tätigkeit in Planung, Bauleitung und -ausführung von Denkmalsanierungen folgte.
        Von 1980 bis 1985 war Demnig künstlerisch-wissenschaftlicher Mitarbeiter im Fachbereich Kunst
        der Universität Kassel."</string>
    <string name="this_artist3">1985 eröffnete Demnig ein eigenes
        Atelier in Köln und arbeitete bei mehreren Projekten mit, so bei der Moltkerei-Werkstatt und dem
        Kunstraum Fuhrwerkswaage. Seit 1994 war er auch im IGNIS-Kulturzentrum tätig.\nSeit April 2011
        befand sich Demnigs Atelier in Frechen im Kunstzentrum Signalwerk, das auf dem Gelände des
        ehemaligen Bahnhofs der Köln-Frechen-Benzelrather Eisenbahn liegt. Dort betreiben auch etwa
        20 andere in der Region bekannte Künstler ihre Ateliers. Im Jahr 2017 verlegte er sein Atelier
        nach Elbenrod in Hessen.</string>
    <string name="this_artist4">Bekannt wurde Demnig durch die Herstellung der Stolpersteine, die er
        auch selbst verlegt. Sie sollen an Menschen erinnern, die der NS-Diktatur zum Opfer fielen.
        Die Steine, die auf der Oberseite kleine Messingplatten mit den Namen der Opfer tragen, verlegt
        er vor deren einstigen Wohnungen im Straßen- oder Gehwegpflaster.\nDas 1996 gestartete Projekt,
        bis 2017 in 1200 deutschen Kommunen realisiert, gilt seit Jahren als das größte dezentrale Mahnmal
        der Welt und zählt mittlerweile 100.000 Steine in 31 Staaten Europas (2023). Das Urheberrecht im
        umfassenden Sinn liegt für die Stolpersteine einzig und ausschließlich nur bei Gunter Demnig persönlich.\n
        Ein tatsächlich durch Demnig entstandenes Urheberrecht muss jedoch insofern angezweifelt werden:
        er kannte das Projekt Namen &amp; Steine das 1994 von Tom Fecht für die ersten AIDS-Opfer im
        Straßenpflaster, u. a. in Bonn, Hamburg und Berlin (Invalidenstraße, vor dem Naturkundemuseum)
        begonnen worden ist.\nDie Namen der Opfer wurden und werden in kleinen quadratischen Natursteinen
        eingemeißelt. Demnig kann für sich jedoch in Anspruch nehmen, nach Modifizierung der Form (Steine
        mit Messingplatte) und mit neuem Inhalt (z. B. Lebensdaten) die Ehrung der Holocaust-Opfer
        deutschlandweit und später weltweit verbreitet zu haben.</string>
    <string name="beruf_und_werk">Beruf und Werk</string>
    <string name="ausbildung">Ausbildung</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="this_stone1">Bei den Steinen handelt es sich um knapp 10 cm
        große Betonwürfel, auf deren oberer Fläche eine Messingplatte angebracht ist. In die
        Messingplatte sind mit Schlagstempeln die Namen und Lebensdaten der Opfer und ggf. weitere
        Informationen eingeprägt.</string>
    <string name="this_stone2">Jeder Stein ist einzeln handgefertigt. Das betrifft sowohl den
        Guss des Betonsteins als auch die Beschriftung der Messingplatte und ihre Anbringung auf
        dem Betonblock.\n Die Steine wurden bis 2005 vom Künstler Gunter Demnig selbst produziert.
        Seitdem werden sie von dem Berliner Bildhauer Michael Friedrichs-Friedländer in seinem
        Berliner Atelier für Demnig hergestellt[, der 2017 alleine mit der Verlegung der Steine 270
        Tage im Jahr beschäftigt war. Friedlaender stellt dort jeden Monat rund 500 Stolpersteine her.</string>
    <string name="this_stone3">Das angebliche "Millionengeschäft auf dem Rücken der Opfer", das dem Künstler von Kritikern
        mitunter vorgehalten wird, relativiert sich schnell, wenn man berücksichtigt, dass von den 120 €,
        die ein Stolperstein kostet, Material, Werkzeug, Versand, Organisation und die insgesamt acht
        Mitarbeiter des Projekts bezahlt werden.</string>
    <string name="this_stone4">Auch aus anderer Richtung gibt es Kritik. So lehnen die Sinti und Roma in Schleswig–Holstein Stolpersteine für ihre Opfer ab, weil man die Steine mit den Füßen treten könne. Darum gibt es für diese Opfer einen besonderen Gedenkstein im Hiroshimapark. Aus dem gleichen Grund betrachtet Charlotte Knobloch, die Präsidentin der israelitischen Kultusgemeinde München und Oberbayern und ehemalige Präsidentin (2006–2010) des Zentralrats der Juden, die Steine als Entwürdigung der Opfer, während der heutige Zentalratspräsident Josef Schuster (seit 2014) das Stolpersteinprojekt befürwortet.</string>
    <string name="menu_stones">Die Stolpersteine</string>
    <string name="willkommen">Willkommen</string>
    <string name="start">Start</string>
    <string name="suche">Suche Stolpersteine …</string>
    <string name="stolpersteine">Stolpersteine</string>
    <string name="Greeting_Description">Für die Einrichtung der App müssen zuerst Daten generiert  werden.
        Das kann einige Zeit in Anspruch nehmen, ist aber nur einmal für die Einrichtung der  App notwendig.
        Es werden im ersten Schritt Informationen aus dem Wiki geladen. Danach werden  aus den Adressen,
        auf denen sich die Stolpersteine beziehen, die Geo-Punkte für die Anzeige auf der Karte ermittelt.
        Ist die Aktion erfolgreich, wird die Karte mit allen gewonnen Informationen angezeigt.
        Dieser Vorgang kann individuell in \"Suche\" wiederholt werden.</string>
    <string name="Greeting_Description_short">Für die Einrichtung der App müssen zuerst Daten generiert werden.
        Das kann einige Zeit in Anspruch nehmen, ist aber nur einmal für die Einrichtung der App notwendig.
        Geh zu \"Suche\" und starte den Such-Vorgang.</string>
    <string name="die_suche_war_erfolgreich_">Die Suche nach Stolpersteine war erfolgreich.\nTrotzdem noch einmal suchen?</string>
    <string name="setting">Einstellungen</string>
    <string name="menu_setting">Einstellungen</string>
    <string name="starte_die_suche">Starte die Suche.\nEs werden Namen und Adressen\nzu den Stolpersteinen gesucht.</string>
    <string name="menu_name">Die Namen</string>
    <string name="noData"><![CDATA[<html><style>body {background-color:white;color:black;} a {color:blue;}</style><body><table><tr><th>Noch keine Daten vorhanden.</th></tr>     <tr><td>Bitte f&uuml;r den ersten Start der App &uuml;ber <i>Einstellungen</i> -> <i>Suche</i> -> auf <i>Start</i> klicken. </td></tr></table></body></html>]]></string>
    <string name="_1_10" translatable="false"><![CDATA[1/10 >]]></string>
    <string name="close"><u>Schliessen</u></string>
    <string name="title">Titel</string>
    <string name="about">Über …</string>
    <string name="coffee_for_me">Kaffee für mich</string>
    <string name="search">Suche</string>
    <string name="settings">Einstellungen</string>
    <string name="contact_me">Kontakt</string>
    <string name="welcome">Willkommen</string>
    <string name="no" translatable="false">no</string>
    <string name="yes" translatable="false">yes</string>
    <string name="m_chtest_du_den_standort_ermitteln">Möchtest du deinen Standort ermitteln? \"Follow\" zeigt deinen Standort auf der Karte an. Das ist nur sinnvoll, wenn du in der Stadt Kiel oder in der Umgebung von Kiel bist. Wenn du nicht in Kiel bist, dann benutze \"No Follow\". So bleibt der Fokus auf der Karte der Stadt Kiel.</string>
    <string name="location">Dein Standort</string>
    <string name="follow">Folgen</string>
    <string name="nofollow">nicht Folgen</string>
    <string name="download_kml">Download Daten</string>
    <string name="kml_file_speichern">Die ermittelten Daten als KML-File zur Weitergabe in Downloads speichern?</string>
    <string name="clear">löschen</string>
    <string name="this_app_is_for_android_8_and_higher">Der Standort konnte nicht identifiziert werden.\\nDiese App ist für Android 8 und höher</string>
    <string name="quelle_wikipedia" translatable="false">Quelle: https://de.wikipedia.org/wiki/Gunter_Demnig</string>
    <string name="source_github" translatable="false">Quell-Code: https://github.com/Klaus-Thaler/Stolperstein</string>
    <string name="show_in_card">in Map anzeigen</string>
    <string name="name">Name</string>
    <string name="address">Adresse</string>
    <string name="born">Geboren</string>
    <string name="death">gestorben/deportiert</string>
    <string name="bio">Biografie</string>
    <string name="foto">Foto</string>
    <string name="map">Map</string>
    <string name="installed">installed</string>
    <string name="kiel" translatable="false">Kiel</string>
    <string name="menu_search">Suche</string>
    <string name="settings_locale_key" translatable="false">lang</string>
    <string name="settings_locale_default" translatable="false">de</string>
    <string name="settings_text_key" translatable="false">textsize</string>
    <string name="settings_theme_key" translatable="false">theme</string>
    <string name="settings_theme_value_default" translatable="false">DEFAULT</string>
    <string name="settings_theme_value_light" translatable="false">LIGHT</string>
    <string name="brightness">Helligkeitsmodus</string>
    <string name="lang">Sprache</string>
</resources>