<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/osm_ic_follow_me"
            android:title="@string/menu_karte" />
        <item
            android:id="@+id/nav_name"
            android:icon="@drawable/osm_ic_follow_me"
            android:title="@string/menu_name" />
        <item
            android:id="@+id/nav_artist"
            android:icon="@drawable/osm_ic_follow_me"
            android:title="@string/menu_artist" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/osm_ic_follow_me"
            android:title="@string/menu_project" />
        <item
            android:id="@+id/nav_stones"
            android:icon="@drawable/osm_ic_follow_me"
            android:title="@string/menu_stones" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/btn_moreinfo"
            android:title="@string/menu_setting" />

    </group>
</menu>