<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="settings_view">

    <group  android:id="@+id/setting_group_title"
        android:menuCategory="system">
        <item
            android:id="@+id/setting_title"
            android:title="@string/setting"
            android:checkable="false" />
    </group>
    <group
        android:id="@+id/settingItemGroup"
        android:menuCategory="system">

        <item
            android:id="@+id/settings_about"
            android:title="@string/about" />

        <item
            android:id="@+id/settings_donat"
            android:title="@string/coffee_for_me" />

        <item
            android:id="@+id/settings_download_cachefile"
            android:title="@string/download_kml" />
    </group>
</menu>