<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/first_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:fontFamily="monospace"
            android:text="@string/willkommen"
            android:textAlignment="center"
            android:textColor="@color/dialogText"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="monospace"
            android:visibility="visible" />

        <TextView
            android:id="@+id/first_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:fontFamily="monospace"
            android:text="@string/stolpersteine"
            android:textAlignment="center"
            android:textColor="@color/dialogText"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textStyle="bold"
            android:typeface="monospace"
            android:visibility="visible" />
        <TextView
            android:id="@+id/second_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:fontFamily="monospace"
            android:text="@string/kiel"
            android:textAlignment="center"
            android:textColor="@color/dialogText"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textStyle="bold"
            android:typeface="monospace"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/counterWeb"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:min="0"
            android:max="100"
            android:visibility="visible" />

        <TextView
            android:id="@+id/listSetup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:visibility="visible"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:text="@string/suche" />

        <Button
            android:id="@+id/searchStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="22sp"
            android:text="@string/start"
            android:clickable="true"
            android:soundEffectsEnabled="true"
            app:shapeAppearanceOverlay="@style/leaf"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/first_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:scrollbars="vertical"
            android:text="@string/Greeting_Description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorLink="@color/top"
            android:visibility="visible" />

        <TextView
            android:id="@+id/furtherInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:scrollbars="vertical"
            android:text="@string/source_github"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorLink="@color/top"
            android:visibility="visible" />

    </LinearLayout>
</FrameLayout>