<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2sp">

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:text="@string/close"
        android:textSize="14sp"
        android:textColor="@color/dialogText"
        android:background="#00ffffff"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/title_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/dialogText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_close"/>

    <TextView
        android:id="@+id/dialog_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kml_file_speichern"
        android:layout_margin="8sp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/dialogText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title_download"/>

    <Button
        android:id="@+id/button_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:text="@string/start"
        android:textSize="14sp"
        android:textColor="@color/dialogText"
        app:shapeAppearanceOverlay="@style/leaf"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/dialog_download"/>

</RelativeLayout>